<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/standard_8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/standard_8"
        android:orientation="horizontal"
        android:padding="@dimen/standard_8">

        <TextView
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_player_sheet_manager_title"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/standard_8">

        <TextView
            android:id="@+id/txv_dialog_player_sheet_managerdialog_player_sheet_manager__sheetname"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_8"
            android:padding="@dimen/standard_6"
            android:textAlignment="center"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_dialog_player_sheet_managerdialog_player_sheet_manager__showsheet"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_8"
            android:text="@string/dialog_player_sheet_manager_show" />

        <Button
            android:id="@+id/btn_dialog_player_sheet_managerdialog_player_sheet_manager__levelup"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_8"
            android:enabled="false"
            android:text="@string/dialog_player_sheet_manager_levelup" />

        <Button
            android:id="@+id/btn_dialog_player_sheet_managerdialog_player_sheet_manager__exportsheet"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_8"
            android:text="@string/dialog_player_sheet_manager_export" />

        <Button
            android:id="@+id/btn_dialog_player_sheet_managerdialog_player_sheet_manager__deletesheet"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_8"
            android:text="@string/dialog_player_sheet_manager_delete" />
    </LinearLayout>
</LinearLayout>