<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/standard_8">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:text="@string/throw_base_value" />

        <TextView
            android:id="@+id/txv_inner_card_player_ability__base"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/zero" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/standard_8">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ellipsize="marquee"
            android:labelFor="@id/edt_inner_card_player_ability__bonus"
            android:singleLine="true"
            android:text="@string/throw_bonus_value" />

        <EditText
            android:id="@+id/edt_inner_card_player_ability__bonus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="numberSigned"
            android:text="@string/zero" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/standard_8">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:text="@string/throw_ability_text" />

        <Spinner
            android:id="@+id/spn_view_inner_card_player_ability__abilities"
            android:layout_width="0dp"
            android:layout_height="@dimen/standard_64"
            android:layout_marginStart="@dimen/standard_24"
            android:layout_weight="1"
            android:gravity="center" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_view_inner_card_player_ability__request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/standard_12"
        android:text="@string/throws_send" />
</LinearLayout>